# PluginDemo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  README_EN.md  config.h.in  copyfile.sh  deletefile.sh
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/: CMakeLists.txt
include/QtNodes/internal/: PluginInterface.hpp  PluginsManager.hpp
include/data/: BaseData.hpp
include/nodes/internal/: FlowView.hpp
include/nodes2/: BaseNode  CustomFlowScene  CustomFlowView  CustomWidgets  DataBase  Parameter  PluginInterface  PluginMessageData  PluginsManager
include/nodes2/internal/: BaseNode.h  Color.h  CommentGraphicsItem.h  Compiler.hpp  CustomFlowScene.h  CustomFlowView.h  CustomWidgets.h  DataBase.h  DataBase.hpp  Export.hpp  OperatingSystem.hpp  ParamWidget.h  Parameter.h  PluginInterface.h  PluginMessageData.h  PluginsManager.h  Types.h
lib/: QtNodes.lib  QtNodesd.lib  nodes.lib  nodes2.lib  nodes2d.lib  nodesd.lib
src/: Node.cpp  Node.hpp  NodeDemo.cpp  NodeDemo.hpp  PluginDefinition.cpp  PluginDefinition.h  moc_NodeDataModel.cpp
src/models/: TextModel.cpp  TextModel.hpp
